--- a/Samples/Common/Sample.Common/Sample.Common.csproj
+++ b/Samples/Common/Sample.Common/Sample.Common.csproj
@@ -1,32 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
-    <RootNamespace>Sample.Common</RootNamespace>
-    <AssemblyName>Sample.Common</AssemblyName>
-    <Platforms>AnyCPU;x64</Platforms>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
+		<RootNamespace>Sample.Common</RootNamespace>
+		<AssemblyName>Sample.Common</AssemblyName>
+		<Platforms>AnyCPU;x64</Platforms>
+	</PropertyGroup>
 
-  <Import Project="$(MSBuildThisFileDirectory)..\..\Graph.props" />
+	<Import Project="$(MSBuildThisFileDirectory)..\..\Graph.props" />
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Graph.Core" Version="2.0.15" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.5.2" />
-    <PackageReference Include="Microsoft.Graph.Communications.Calls" Version="1.2.0.3742" />
-    <PackageReference Include="Microsoft.Graph.Communications.Client" Version="1.2.0.3742" />
-    <PackageReference Include="Microsoft.Graph.Communications.Common" Version="1.2.0.7270" />
-    <PackageReference Include="Microsoft.Graph.Communications.Core" Version="1.2.0.3742" />
-    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="8.0.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Graph.Core" Version="2.0.15" />
+		<PackageReference Include="MSTest.TestFramework" Version="3.5.2" />
+		<PackageReference Include="Microsoft.Graph.Communications.Calls" Version="1.2.0.5022" />
+		<PackageReference Include="Microsoft.Graph.Communications.Client" Version="1.2.0.5022" />
+		<PackageReference Include="Microsoft.Graph.Communications.Common" Version="1.2.0.7270" />
+		<PackageReference Include="Microsoft.Graph.Communications.Core" Version="1.2.0.5022" />
+		<PackageReference Include="Microsoft.Identity.Client" Version="4.66.2" />
+		<PackageReference Include="System.Text.Json" Version="8.0.5" />
+		<PackageReference Include="System.Collections.Immutable" Version="9.0.0" />
+		<PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="8.0.1" />
+	</ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-  </ItemGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
+		<Reference Include="System" />
+		<Reference Include="System.Data" />
+		<Reference Include="System.Net.Http" />
+		<Reference Include="System.Collections.Immutable" />
+	</ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-    <PackageReference Include="System.Net.Http" Version="4.3.4" />
-  </ItemGroup>
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+		<PackageReference Include="System.Net.Http" Version="4.3.4" />
+	</ItemGroup>
 
 </Project>
