--- a/Samples/V1.0Samples/LocalMediaSamples/HueBot/HueBot/HueBot.csproj
+++ b/Samples/V1.0Samples/LocalMediaSamples/HueBot/HueBot/HueBot.csproj
@@ -1,45 +1,56 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
-    <IsServiceFabricServiceProject>True</IsServiceFabricServiceProject>
-    <RootNamespace>Sample.HueBot</RootNamespace>
-    <AssemblyName>HueBot</AssemblyName>
-    <Platforms>x64</Platforms>
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net472</TargetFramework>
+		<IsServiceFabricServiceProject>True</IsServiceFabricServiceProject>
+		<RootNamespace>Sample.HueBot</RootNamespace>
+		<AssemblyName>HueBot</AssemblyName>
+		<Platforms>x64</Platforms>
+		<PlatformTarget>x64</PlatformTarget>
+	</PropertyGroup>
 
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Graph.props" />
+	<Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Graph.props" />
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.HttpSys" Version="2.1.1" />
-    <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.HttpSys" Version="3.2.176" />
-    <!-- Although Bots.Media is implicitly imported by Calls.Media, this library requires an explicit reference for
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore" Version="2.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.30" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Server.HttpSys" Version="2.1.12" />
+		<PackageReference Include="Microsoft.ServiceFabric.AspNetCore.HttpSys" Version="3.2.176" />
+		<PackageReference Include="System.Text.Json" Version="8.0.5" />
+		<PackageReference Include="Microsoft.Identity.Client" Version="4.66.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Transport.Sockets" Version="2.1.40" />
+		<PackageReference Include="System.Security.Cryptography.Xml" Version="6.0.1" />
+		<PackageReference Include="System.Collections.Immutable" Version="9.0.0" />
+		<!-- Although Bots.Media is implicitly imported by Calls.Media, this library requires an explicit reference for
     some scripts included within the nuget package. -->
-    <PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.20.0.348-alpha" />
-    <PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.3742" />
-  </ItemGroup>
+		<PackageReference Include="Microsoft.Skype.Bots.Media" Version="1.27.0.2-alpha" />
+		<PackageReference Include="Microsoft.Graph.Communications.Calls.Media" Version="1.2.0.5022" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Common\Sample.Common\Sample.Common.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\..\..\Common\Sample.Common\Sample.Common.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+	<ItemGroup>
+		<Content Update="appsettings.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Update="Startup.cmd">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="VC_redist.x64.exe">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Update="Startup.cmd">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Update="VC_redist.x64.exe">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
+	<ProjectExtensions>
+		<VisualStudio>
+			<UserProperties arm_3deployment_4azuredeploy_1json__JsonSchema="" />
+		</VisualStudio>
+	</ProjectExtensions>
 
 </Project>
